[package]
name = "honey_method_v2021"
version = "0.1.0"
authors = ["daiki <daikihi+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-web-static-files = "3.0"

[build-dependencies]
actix-web-static-files = "3.0"

